force-app/main/default/objects/Loyalty_Transaction__c/Loyalty_Transaction__c.object-meta.xml
<CustomObject>
    <description>Tracks customer activities related to a loyalty program, such as points earned, redeemed, or expired. This object provides a detailed history of loyalty transactions, enabling effective customer rewards management and personalized engagement.</description>
    <label>Loyalty Transaction</label>
    <nameField>
        <displayFormat>LT-{00000000}</displayFormat>
        <label>Loyalty Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>