force-app/main/default/objects/Loyalty_Transaction__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>The number of loyalty points involved in the transaction.</description>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>