force-app/main/default/objects/Loyalty_Transaction__c/fields/Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Source__c</fullName>
    <description>Tracks where or how the transaction occurred.</description>
    <label>Transaction Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Manual Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>