force-app/main/default/objects/Loyalty_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Categorizes the type of loyalty transaction.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earn</fullName>
            </value>
            <value>
                <fullName>Redeem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>